Some fixes for the nav bar on different sizes and better alignment of button and select

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -16,6 +16,7 @@ a {
 .button,
 .selector {
     display: inline-block;
+    margin-bottom: 0;
     color: $section-headings-color;
     background-color: $bg-color;
     border-color: $section-headings-color;
@@ -26,6 +27,29 @@ a {
         color 0.2s,
         background-color 0.2s,
         border-color 0.2s;
+    min-height: 1.8em;
+    text-align: center;
+
+    @include large {
+        //padding: 0.75rem 1rem;
+    }
+    
+    @include medium {
+        //padding: 0.6rem 0.9rem;
+        font-size: 0.9rem;
+    }
+    
+    @include small {
+        display: block;
+        width: 100%;
+        //padding: 0.75rem;
+        font-size: 0.9rem;
+    
+        + .button {
+            margin-top: 1rem;
+            margin-left: 0;
+        }
+    }
 }
 
 .button {
@@ -35,10 +59,18 @@ a {
         background-color: rgba(100, 100, 100, 0.3);
         border-color: rgba(100, 100, 100, 0.3);
     }
+
+    // Adds a margin to a second button immediately following another
+    + .button {
+        margin-left: 1rem;
+    }
 }
 
 .selector {
-    padding: 0.2em;
+    // padding: 0.2em;
+    // padding-left: 0.5em;
+    // padding-bottom: 0.2em;
+    // padding-top: 0.3em;
 
     &:hover {
         color: $section-headings-color;
@@ -52,50 +84,6 @@ a {
         // border-color: rgba(100, 100, 100, 0.3);
     }
 }
-
-// .btn {
-//   display: inline-block;
-//   margin-bottom: 1rem;
-//   color: rgba(255, 255, 255, 0.7);
-//   background-color: rgba(255, 255, 255, 0.08);
-//   border-color: rgba(255, 255, 255, 0.2);
-//   border-style: solid;
-//   border-width: 1px;
-//   border-radius: 0.3rem;
-//   transition: color 0.2s, background-color 0.2s, border-color 0.2s;
-
-//   &:hover {
-//     color: rgba(255, 255, 255, 0.8);
-//     text-decoration: none;
-//     background-color: rgba(255, 255, 255, 0.2);
-//     border-color: rgba(255, 255, 255, 0.3);
-//   }
-
-//   + .btn {
-//     margin-left: 1rem;
-//   }
-
-//   @include large {
-//     padding: 0.75rem 1rem;
-//   }
-
-//   @include medium {
-//     padding: 0.6rem 0.9rem;
-//     font-size: 0.9rem;
-//   }
-
-//   @include small {
-//     display: block;
-//     width: 100%;
-//     padding: 0.75rem;
-//     font-size: 0.9rem;
-
-//     + .btn {
-//       margin-top: 1rem;
-//       margin-left: 0;
-//     }
-//   }
-// }
 
 img.rounded {
     display: block;
